syntax = "proto3";

package role.v1;

option go_package = "github.com/steve-mir/go-auth-system/pb";

import "google/protobuf/timestamp.proto";

// RoleService manages roles and permissions
service RoleService {
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
  rpc UnassignRole(UnassignRoleRequest) returns (UnassignRoleResponse);
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);
  rpc ValidatePermission(ValidatePermissionRequest) returns (ValidatePermissionResponse);
}

// Role message
message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string permissions = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Permission message
message Permission {
  string resource = 1;
  string action = 2;
  string scope = 3;
}

// User role assignment message
message UserRole {
  string user_id = 1;
  string role_id = 2;
  string role_name = 3;
  google.protobuf.Timestamp assigned_at = 4;
  string assigned_by = 5;
}

// Create role request message
message CreateRoleRequest {
  string name = 1;
  string description = 2;
  repeated string permissions = 3;
}

// Create role response message
message CreateRoleResponse {
  Role role = 1;
}

// Get role request message
message GetRoleRequest {
  string role_id = 1;
}

// Get role response message
message GetRoleResponse {
  Role role = 1;
}

// Update role request message
message UpdateRoleRequest {
  string role_id = 1;
  optional string name = 2;
  optional string description = 3;
  repeated string permissions = 4;
}

// Update role response message
message UpdateRoleResponse {
  Role role = 1;
}

// Delete role request message
message DeleteRoleRequest {
  string role_id = 1;
}

// Delete role response message
message DeleteRoleResponse {
  bool success = 1;
  string message = 2;
}

// List roles request message
message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string sort_by = 4;
  string sort_order = 5;
}

// List roles response message
message ListRolesResponse {
  repeated Role roles = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

// Assign role request message
message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
  string assigned_by = 3;
}

// Assign role response message
message AssignRoleResponse {
  bool success = 1;
  string message = 2;
  UserRole user_role = 3;
}

// Unassign role request message
message UnassignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

// Unassign role response message
message UnassignRoleResponse {
  bool success = 1;
  string message = 2;
}

// Get user roles request message
message GetUserRolesRequest {
  string user_id = 1;
}

// Get user roles response message
message GetUserRolesResponse {
  repeated UserRole user_roles = 1;
  repeated string permissions = 2;
}

// Validate permission request message
message ValidatePermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
  string scope = 4;
}

// Validate permission response message
message ValidatePermissionResponse {
  bool allowed = 1;
  string reason = 2;
  repeated string matching_roles = 3;
}